Text blocks aren't quite what I need here.